Initial plot of PCA in tabbed view with heatmap. Scaling, like the heatmap is not perfect. For the timebeing I have made the overflow property 'scroll', but I think it would be great if we could fix both heatmap scaling and PCA scaling. This is particularly an issue when collapsing the control panel, where the plots do not scale with the container they are in.

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,8 @@ svg:not(:root) {
   width: 100%;
 }
 
-#exprDiv{
+#exprDiv, #pcaDiv{
+  overflow: scroll;
     height: 100%;
     width: 100%;
     position: relative;
